--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start-dev": "nodemon server.js -e css,hbs,js,json"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
+    "neo4j-driver": "^4.1.0",
     "pg": "^7.18.1"
   },
   "devDependencies": {
