--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
-    "neo4j-driver": "^4.1.0",
+    "neo4j-driver": "4.0.2",
     "pg": "^7.18.1"
   },
   "devDependencies": {
