--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Charlotte Birmingham",
   "scripts": {
     "start": "node server.js",
-    "start-dev": "nodemon server.js -e css,hbs,js,json"
+    "start-dev": "nodemon -e css,hbs,js,json server.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -16,7 +16,8 @@
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
     "neo4j-driver": "4.0.2",
-    "pg": "^7.18.1"
+    "pg": "^7.18.1",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.14.1"
